# mql5-lsp

./: APPROACH_B_SPEC.md  Cargo.toml  build.rs
src/: builtins.rs  documents.rs  formatter.rs  includes.rs  main.rs  parser.rs  symbols.rs
